# parsingKpi

./: README.md  docker-compose.yml  dockerfile  kpiAirScale00.py  kpiFlexiZone00.py  parsingxml.py  pyproject.toml
