[project]
name = "parsingkpi"
version = "0.1.0"
description = "This project is to parse kpi files from radio Nokia (AirScale and FlexZone)"
authors = [
    {name = "jlplautz",email = "jorge.plautz@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
